# enable-banking-mcp

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: api.rs  main.rs  server.rs  sessions.rs  tools.rs
src/ui/: accounts.html  balances.html  payment.html  sessions.html  spending.html  transactions.html
