[package]
name = "enable-banking-mcp"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "enable-banking-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.1.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
jsonwebtoken = "9"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
anyhow = "1.0"
dirs = "5"
rcgen = { version = "0.13", features = ["aws_lc_rs", "pem"] }
rsa = { version = "0.9", features = ["pem"] }
pkcs8 = { version = "0.10", features = ["pem"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
tiny_http = { version = "0.12", features = ["ssl"] }
url = "2.5"
once_cell = "1"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
